# rs-win-macro

./: Cargo.toml  data.txt  firstmac  input.txt
src/: hook.rs  input.rs  lib.rs  main.rs  mod.rs  test.rs
src/keyhook/: helper.rs  hook.rs  input.rs  keycodes.rs  mod.rs  simulate.rs  structs.rs
