[package]
name = "maco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rdev = "0.5.3"
winapi = { version = "0.3", features = ["winuser"] }
inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
serde = { version = "1", features = ["derive"] }
once_cell = "1.18"
strum = "0.25"
strum_macros = "0.25"
clap = { version = "4.4", features = ["derive", "cargo"] }

[dependencies.windows]
version = "0.51"
features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Console"]
